--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "rangy": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
