--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "astrocite": "^0.16.4",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "rangy": "^1.3.1",
